Closed Bug 1721910 Opened 3 years ago Closed 3 years ago

xul.css is used on android and imports tooltip.css which is not available there

Categories

(Toolkit :: UI Widgets, defect)

All
Android
defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: Gijs, Assigned: Gijs)

References

Details

Attachments

(1 file)

In bug 1721627 I'm experimenting with making tests fail if we request internal resources that aren't present. The idea is to prevent patches from landing if they mis-spell (or forget to hg add, or forget to include in jar.mn or similar) subresources like CSS files and images, by failing if we hit chrome: or resource: URLs in tests that are not available (ie where the internal jar/file code cannot find the relevant file).

The android jobs fail because they include xul.css somewhere, and that includes chrome://global/skin/tooltip.css (see https://searchfox.org/mozilla-central/rev/2022d34edd5817948b27f093cd203ae6adb18a25/toolkit/content/xul.css#19 ), which we don't ship on android.

See e.g. this job on try, which has this logcat which says:

07-22 13:38:37.006  5013  5028 I Gecko   : Missing file: chrome://global/skin/tooltip.css
07-22 13:38:37.006  5013  5028 F MOZ_CRASH: Hit MOZ_CRASH(Shouldn't request non-existing chrome or resource URLs!) at /builds/worker/checkouts/gecko/netwerk/base/nsNetUtil.cpp:3329

Presumably we should do one or more of:

  1. stop including/loading xul.css on android (why is that even happening?)
  2. ifdef out the tooltip.css include in xul.css so it's not there on android
  3. include the linux tooltip.css on android
  4. write a custom tooltip.css file for android (though it's not clear to me how many android devices would have pointing devices so that we care about the tooltips anywhere...)

:agi, can you help clarify what should happen here?

Flags: needinfo?(agi)

I would rather copy linux's tooltip.css for now. I can see some stuff in xul.css might be used in some about: pages that we have too. In general I would hope we could move any platform-specific stuff in xul.css to somewhere in browser.

Flags: needinfo?(agi)

bug 1724718 is unearthing more stuff so I'm gonna take a stab at just fixing this.

Assignee: nobody → gijskruitbosch+bugs
Blocks: 1724718
Status: NEW → ASSIGNED
Attachment #9235760 - Attachment description: Bug 1721910 - make it obvious that android needs some toolkit theming, and reduce duplication there, r?agi!,jaws!,emilio! → Bug 1721910 - make it obvious that android needs some toolkit theming, and reduce duplication there, r?agi!,jaws!
Pushed by gijskruitbosch@gmail.com: https://hg.mozilla.org/integration/autoland/rev/0591d05f4fa0 make it obvious that android needs some toolkit theming, and reduce duplication there, r=agi,desktop-theme-reviewers,dao
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: