Bug 1721910 - make it obvious that android needs some toolkit theming, and reduce duplication there, r=agi,desktop-theme-reviewers,dao

Differential Revision: https://phabricator.services.mozilla.com/D122335